src/gen/snapshots/mcp_forge__r#gen__tests__Cargo_toml.snap
---
source: src/gen/mod.rs
expression: content
---
[package]
name = "pet_store"
version = "1.0.0"
edition = "2024"
rust-version = "1.89.0"
description = "A sample pet store API."
license = "MIT"

[[bin]]
name = "pet_store"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
heck = "0.5"
kotae = "0.1"
okiba = "0.2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rmcp = { version = "0.15", features = ["server", "transport-io"] }
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
urlencoding = "2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true

[lints.clippy]
pedantic = "warn"
